--- a/Develop/index.html
+++ b/Develop/index.html
@@ -17,8 +17,7 @@
           <h2>Generate a Password</h2>
         </div>
         <div class="card-body">
-          <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"
-          ></textarea>
+          <textarea readonly id="password" placeholder="Your Secure Password" aria-label="Generated Password"></textarea>
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
@@ -26,25 +25,29 @@
       </div>
     </div>
 
-    <div class= "popupContainer" style="display: none; opacity: 0">
+    <div class="popupContainer" style="display: none; opacity: 0">
       <div class="popup">
         <div class="popupHeader">Password Options</div>
         <p>Character types</p>
-        <ul style = "list-style: none;">
-          <li><input type = "checkbox" name = "characterOpt" id = "Uppercase">Uppercase</li>
-          <li><input type = "checkbox" name = "characterOpt" id = "Lowercase">Lowercase</li>
-          <li><input type = "checkbox" name = "characterOpt" id = "Numeric">Numeric</li>
-          <li><input type = "checkbox" name = "characterOpt" id = "Special">Special"</li>
+        <ul style="list-style: none;">
+          <li><input type="checkbox" name="characterOpt" id="Lowercase">Lowercase</li>
+          <li><input type="checkbox" name="characterOpt" id="Uppercase">Uppercase</li>
+          <li><input type="checkbox" name="characterOpt" id="Numeric">Numeric</li>
+          <li><input type="checkbox" name="characterOpt" id="Special">Special</li>
         </ul>
         <div>
-          <p>Password Length <input type="number" id="passwordLength" placeholder="8-128" min = "8" max="128" style="width: 50px"></p>
+          <p>
+            Password Length
+            <input type="number" id="passwordLength" placeholder="8-128" min="8" max="128" style="width: 50px">
+          </p>
         </div>
         <div class="popupAction">
-          <button id="submitOptions">Generate Password</button>
+          <button id="submitOptions" >Generate Password</button>
         </div>
-        <p class = "notice" style="display: none; opacity: 0; position: absolute; bottom: 5px; left: 40%;"></p>
+        <p class="notice" style="display: none; opacity: 0; position: absolute; bottom: 5px; left: 40%;"></p>
       </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
